scrollbar fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,14 +131,9 @@ body {
   }
 }
 
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
 /* Ocultar scrollbar en Firefox */
-.no-scrollbar {
-  -ms-overflow-style: none; /* IE y Edge */
-  scrollbar-width: none; /* Firefox */
+.scroll-color {
+  scrollbar-color: var(--color-accent2) transparent;
 }
 
 .add-button {
@@ -169,6 +164,16 @@ body {
 @layer utilities {
   .font-title {
     font-weight: var(--font-title);
+  }
+}
+
+@media (width <= 560px) {
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
 }
 
